# roguebot

./: .gitignore  README.md  pyproject.toml
assets/: bean.ase  book-tile.ase  book.ase  stone.ase  wall.ase
src/: __main__.py  aiomysql_patches.py  bot.py  logging.py
src/plugins/: game.py  misc.py
